--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   ionicons: ^0.1.2
   chat_bubbles: ^0.7.1+6
   provider: ^6.0.3
+  cached_network_image: ^3.2.1
 
 
 dev_dependencies:
